--- a/commerse.css
+++ b/commerse.css
@@ -6,11 +6,104 @@
 }
 .left-content {
     display:flex;
-    padding-right:40px;
+    
+}
+h1{
+    color: red;
+    margin-left: 400px;
 }
 span{
     padding-right: 200px;
     margin-top:15px;
     color: blue;
     padding-left: 5px;
+}
+.jersey-cad{
+    display: flex;
+    
+}
+.jersey-cad2{
+    display: flex;
+    margin-top: 15px;
+}
+.argentina{
+    border: 2px solid rgb(0, 3, 0);
+    background-color: transparent;
+}
+.arsenal{
+    margin-left: 5px;
+    border: 2px solid black;
+    background-color: transparent;
+}
+.england{
+    margin-left: 5px;
+    border-radius: 5px;
+    border:2px solid black;
+}
+.inter-miami{
+    margin-left: 5px;
+    border-radius: 5px;
+    border:2px solid black;
+}
+.mancity{
+    margin-left: 5px;
+    border-radius: 5px;
+    border:2px solid black;
+}
+.portugal{
+    margin-left: 5px;
+    border-radius: 5px;
+    border:2px solid black;
+}
+.psg{
+    margin-left: 5px;
+    border-radius: 5px;
+    border:2px solid black;
+}
+.realmadrid{
+    margin-left: 5px;
+    border-radius: 5px;
+    border:2px solid black;
+}
+.boots{
+    display: flex;
+}
+.nike{
+    margin-left: 10px;
+    border-radius: 5px;
+    border:2px solid black;
+    
+}
+.nike img{
+    border-radius: 10%;
+    margin-left: 10px;
+}
+.mercurial{
+    margin-left: 5px;
+    border-radius: 5px;
+    border:2px solid black;
+    
+}
+.mercurial img{
+    border-radius: 10%;
+    margin-left: 10px;
+}
+.puma{
+    margin-left: 5px;
+    border-radius: 5px;
+    border:2px solid black;
+}
+.puma img{
+    border-radius: 10%;
+    margin-left: 10px;
+}
+.sketcher{
+    margin-left: 5px;
+    border-radius: 5px;
+    border:2px solid black;
+    color: black;
+}
+.sketcher img{
+    border-radius: 10%;
+    margin-left: 10px;
 }
