--- a/commerse.css
+++ b/commerse.css
@@ -1,12 +1,19 @@
+body{
+    background-color: rgb(1, 1, 32);
+}
 .navbar{
-    background-color: aquamarine;
-    border:2px solid blue;
+    background-color: rgb(114, 162, 235);
+    border:2px solid rgb(190, 190, 230);
     border-radius:5px;
     height: 50px;
 }
 .left-content {
     display:flex;
-    
+    color:rgb(216, 12, 12);
+}
+.left-content :hover{
+    background-color: aqua;
+    padding:5px;
 }
 h1{
     color: red;
@@ -18,6 +25,10 @@ span{
     color: blue;
     padding-left: 5px;
 }
+h2{
+    color:red;
+    margin-left:450px;
+}
 .jersey-cad{
     display: flex;
     
@@ -27,43 +38,43 @@ span{
     margin-top: 15px;
 }
 .argentina{
-    border: 2px solid rgb(0, 3, 0);
+    border: 2px solid rgb(0, 223, 253);
     background-color: transparent;
 }
 .arsenal{
     margin-left: 5px;
-    border: 2px solid black;
+    border: 2px solid rgb(13, 228, 42);
     background-color: transparent;
 }
 .england{
     margin-left: 5px;
     border-radius: 5px;
-    border:2px solid black;
+    border:2px solid rgb(78, 19, 241);
 }
 .inter-miami{
     margin-left: 5px;
     border-radius: 5px;
-    border:2px solid black;
+    border:2px solid rgb(235, 9, 167);
 }
 .mancity{
     margin-left: 5px;
     border-radius: 5px;
-    border:2px solid black;
+    border:2px solid rgb(5, 227, 235);
 }
 .portugal{
     margin-left: 5px;
     border-radius: 5px;
-    border:2px solid black;
+    border:2px solid rgb(247, 10, 42);
 }
 .psg{
     margin-left: 5px;
     border-radius: 5px;
-    border:2px solid black;
+    border:2px solid rgb(218, 241, 9);
 }
 .realmadrid{
     margin-left: 5px;
     border-radius: 5px;
-    border:2px solid black;
+    border:2px solid rgb(243, 168, 6);
 }
 .boots{
     display: flex;
@@ -71,7 +82,7 @@ span{
 .nike{
     margin-left: 10px;
     border-radius: 5px;
-    border:2px solid black;
+    border:2px solid rgb(238, 150, 17);
     
 }
 .nike img{
@@ -81,7 +92,7 @@ span{
 .mercurial{
     margin-left: 5px;
     border-radius: 5px;
-    border:2px solid black;
+    border:2px solid rgb(7, 193, 240);
     
 }
 .mercurial img{
@@ -91,19 +102,24 @@ span{
 .puma{
     margin-left: 5px;
     border-radius: 5px;
-    border:2px solid black;
+    border:2px solid rgb(6, 223, 223);
 }
 .puma img{
     border-radius: 10%;
     margin-left: 10px;
 }
 .sketcher{
-    margin-left: 5px;
+    margin-left: 2%;
     border-radius: 5px;
-    border:2px solid black;
+    border:2px solid rgb(11, 14, 238);
     color: black;
 }
 .sketcher img{
     border-radius: 10%;
     margin-left: 10px;
+}
+input{
+    background-color: rgb(0, 26, 255);
+    color:wheat;
+    margin-left: 2%;
 }
