--- a/commerse.css
+++ b/commerse.css
@@ -1,8 +1,8 @@
 body{
-    background-color: rgb(1, 1, 32);
+    background-color: rgb(247, 247, 247);
 }
 .navbar{
-    background-color: rgb(114, 162, 235);
+    background-color: rgb(250, 252, 255);
     border:2px solid rgb(190, 190, 230);
     border-radius:5px;
     height: 50px;
@@ -16,13 +16,13 @@ body{
     padding:5px;
 }
 h1{
-    color: red;
+    color: rgb(0, 0, 0);
     margin-left: 400px;
 }
 span{
     padding-right: 200px;
     margin-top:15px;
-    color: blue;
+    color: rgb(1, 1, 20);
     padding-left: 5px;
 }
 h2{
@@ -38,43 +38,52 @@ h2{
     margin-top: 15px;
 }
 .argentina{
-    border: 2px solid rgb(0, 223, 253);
+    border: 2px solid rgb(0, 11, 12);
     background-color: transparent;
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
+
 }
 .arsenal{
-    margin-left: 5px;
-    border: 2px solid rgb(13, 228, 42);
+    margin-left: 15px;
+    border: 2px solid rgb(0, 3, 1);
     background-color: transparent;
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
 }
 .england{
-    margin-left: 5px;
+    margin-left: 15px;
     border-radius: 5px;
-    border:2px solid rgb(78, 19, 241);
+    border:2px solid rgb(4, 1, 12);
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
 }
 .inter-miami{
-    margin-left: 5px;
+    margin-left: 15px;
     border-radius: 5px;
-    border:2px solid rgb(235, 9, 167);
+    border:2px solid rgb(7, 0, 5);
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
 }
 .mancity{
     margin-left: 5px;
     border-radius: 5px;
-    border:2px solid rgb(5, 227, 235);
+    border:2px solid rgb(0, 8, 8);
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
 }
 .portugal{
-    margin-left: 5px;
+    margin-left: 15px;
     border-radius: 5px;
-    border:2px solid rgb(247, 10, 42);
+    border:2px solid rgb(0, 0, 0);
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
 }
 .psg{
-    margin-left: 5px;
+    margin-left: 15px;
     border-radius: 5px;
-    border:2px solid rgb(218, 241, 9);
+    border:2px solid rgb(12, 14, 1);
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
 }
 .realmadrid{
-    margin-left: 5px;
+    margin-left: 15px;
     border-radius: 5px;
-    border:2px solid rgb(243, 168, 6);
+    border:2px solid rgb(7, 5, 1);
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
 }
 .boots{
     display: flex;
@@ -82,44 +91,52 @@ h2{
 .nike{
     margin-left: 10px;
     border-radius: 5px;
-    border:2px solid rgb(238, 150, 17);
-    
+    border:2px solid rgb(0, 0, 0);
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
 }
 .nike img{
-    border-radius: 10%;
-    margin-left: 10px;
+    border-radius: 10;
+    margin-left: 10x;
+    width:310px;
+    height:200px;
 }
 .mercurial{
-    margin-left: 5px;
+    margin-left: 15px;
     border-radius: 5px;
-    border:2px solid rgb(7, 193, 240);
-    
+    border:2px solid rgb(1, 8, 10);
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
 }
 .mercurial img{
-    border-radius: 10%;
-    margin-left: 10px;
+    border-radius: 10;
+    margin-left: 0px;
+    width:310px;
+    height:200px;
 }
 .puma{
-    margin-left: 5px;
+    margin-left: 15px;
     border-radius: 5px;
-    border:2px solid rgb(6, 223, 223);
+    border:2px solid rgb(0, 8, 8);
+    box-shadow: 10px 10px 5px rgb(49, 66, 66);
 }
 .puma img{
-    border-radius: 10%;
-    margin-left: 10px;
+    border-radius: 10;
+    margin-left: 0px;
+    width:310px;
 }
 .sketcher{
-    margin-left: 2%;
+    margin-left: 15px;
     border-radius: 5px;
-    border:2px solid rgb(11, 14, 238);
+    border:2px solid rgba(1, 2, 17, 0.973);
     color: black;
+    box-shadow: 10px 10px 5px rgb(10, 49, 49);
 }
 .sketcher img{
-    border-radius: 10%;
-    margin-left: 10px;
+    border-radius: 10;
+    margin-left: 0px;
+    width:320px;
 }
 input{
-    background-color: rgb(0, 26, 255);
+    background-color: rgb(180, 185, 235);
     color:wheat;
     margin-left: 2%;
 }
